syntax = "proto3";

option go_package = "github.com/bartmika/tstorage-server";

package proto;

import "google/protobuf/timestamp.proto";


// The tstorage service definition.
service TStorage {
    rpc InsertRow (TimeSeriesDatum) returns (InsertResponse) {}
    rpc InsertRows (stream TimeSeriesDatum) returns (InsertResponse) {}
    rpc Select (Filter) returns (stream DataPoint) {}
}

// --- COMMON TO ALL ENDPOINTS ---

message DataPoint {
    double value = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message Label {
    string name = 1;
    string value = 2;
}

message TimeSeriesDatum {
    string metric = 1;
    repeated Label labels = 2;
    double value = 3;
    google.protobuf.Timestamp timestamp = 4;
}

// --- INSERT ENDPOINT ---

message InsertResponse {
    string message = 1;
    bool status = 2;
}

// --- SELECT ENDPOINT ---

message Filter {
    string metric = 1;
    repeated Label labels = 2;
    google.protobuf.Timestamp start = 3;
    google.protobuf.Timestamp end = 4;
}

message SelectResponse {
    repeated DataPoint points = 1;
}
